--- a/TestingLibraries/TestingLibraries.csproj
+++ b/TestingLibraries/TestingLibraries.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspose.Words" Version="20.12.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="18.3.0.53" />
     <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="18.3.0.53" />
